--- a/short-responses/q1.md
+++ b/short-responses/q1.md
@@ -3,6 +3,9 @@
 What is the job of a server application?
 
 # Answer
+server application is to store data
+accept request and post form the client side
+
 
 # Teacher Feedback
 
