finished the short responce

--- a/short-responses/q1.md
+++ b/short-responses/q1.md
@@ -3,9 +3,9 @@
 What is the job of a server application?
 
 # Answer
-server application is to store data
-accept request and post form the client side
-
+the job of a server application is to serve static files that live on the server
+fetch data from third-party API that requires an API key
+managing data from the servers own database
 
 # Teacher Feedback
 
