--- a/short-responses/q2.md
+++ b/short-responses/q2.md
@@ -5,6 +5,8 @@
 What is an endpoint?
 
 # Answer
+an endpoint is a path that clients can hit in order to send requests to be able to read/create/update/delete data
+
 
 # Teacher Feedback
 
