--- a/short-responses/q4.md
+++ b/short-responses/q4.md
@@ -6,8 +6,9 @@ If I send a request to `/api/data?filter=frog`, how do I get the value of the qu
 
 ```js
 const serveData = (req, res, next) => {
-  const filterValue = ???
+  const filterValue = req.query.name || 'spaghetti';
   // use the filterValue and send back a response
+  app.send(`<p>my favorite food is ${filterValue}</p>`)
 }
 app.get('/api/data', serveData);
 ```
