--- a/short-responses/q3.md
+++ b/short-responses/q3.md
@@ -5,6 +5,7 @@
 What is a controller?
 
 # Answer
+a controller is a callback function that parses a request and sends a response
 
 # Teacher Feedback
 
