short response graded: 10/12 points

--- a/short-responses/q4.md
+++ b/short-responses/q4.md
@@ -17,4 +17,6 @@ app.get('/api/data', serveData);
 
 # Teacher Feedback
 
-X/3 points
+1/3 points
+
+Almost Mo! `req.query` is a good start but the query parameter name is `filter` so `req.query.filter` is what you want to do.
